<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    tools:context=".StudyMode"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        xmlns:app="http://schemas.android.com/apk/res-auto">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="6dp"
                android:layout_marginEnd="6dp"
                android:layout_marginTop="6dp"
                app:cardElevation="3dp"
                android:layout_marginBottom="52dp"
                app:cardCornerRadius="6dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="45dp"
                    android:orientation="horizontal"
                    android:weightSum="2"
                    android:background="@drawable/quiz_cover">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="Question 1/10"
                        android:layout_weight="2"
                        android:layout_gravity="center"
                        android:textColor="@color/white"
                        android:textStyle="bold"
                        android:textSize="25sp"
                        android:layout_margin="6dp">
                    </TextView>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="01:59s"
                        android:textSize="18sp"
                        android:padding="6dp"
                        android:drawablePadding="6dp"
                        android:background="@drawable/layout_bg2"
                        android:drawableLeft="@drawable/ic_clock"
                        android:layout_marginEnd="3dp"
                        android:textColor="#000"
                        android:layout_gravity="center">

                    </TextView>

                </LinearLayout>


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="44dp"
                    android:background="@color/white"
                    android:orientation="vertical">


                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/quiz_question_big"
                        android:justificationMode="inter_word"
                        android:textColor="@color/colorSemiDark"
                        android:textStyle="bold"
                        android:textSize="20sp"
                        android:layout_margin="12dp">
                    </TextView>

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">


                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="12dp"
                            android:background="@drawable/layout_bg_stroke">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="@string/quiz_question"
                                android:justificationMode="inter_word"
                                android:textColor="@color/colorSemiDark"
                                android:textStyle="italic"
                                android:textSize="20sp"
                                android:layout_margin="12dp">
                            </TextView>

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="Explain"
                            android:textStyle="bold|italic"
                            android:textSize="20dp"
                            android:layout_alignParentRight="true"
                            android:layout_marginEnd="60dp"
                            android:background="@color/white"
                            android:paddingLeft="6dp"
                            android:paddingRight="6dp">
                        </TextView>

                    </RelativeLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:layout_margin="12dp"
                        android:layout_marginBottom="6dp"
                        android:background="@drawable/layout_bg_stroke">

                        <CheckBox
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginStart="14dp"
                            android:layout_marginTop="14dp"
                            android:layout_marginBottom="14dp"
                            android:scaleX="1.7"
                            android:scaleY="1.7">
                        </CheckBox>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/quiz_ans"
                            android:textStyle="bold"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="14dp"
                            android:padding="2dp"
                            android:textColor="@color/colorSemiDark"
                            android:textSize="20sp">
                        </TextView>

                    </LinearLayout>


                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal"
                        android:gravity="center"
                        android:weightSum="2"
                        android:layout_gravity="bottom">

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:layout_margin="6dp"
                            android:layout_weight="1"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:orientation="vertical"
                            android:background="@drawable/gradiant_btn_bg">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Show"
                                android:textSize="18sp"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:layout_margin="10dp"
                                android:layout_gravity="center">
                            </TextView>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:clickable="true"
                            android:focusable="true"
                            android:layout_weight="1"
                            android:layout_margin="6dp"
                            android:foreground="?android:attr/selectableItemBackground"
                            android:orientation="vertical"
                            android:background="@drawable/gradiant_btn_bg">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:text="Next"
                                android:textSize="18sp"
                                android:textColor="@color/white"
                                android:textStyle="bold"
                                android:layout_margin="10dp"
                                android:layout_gravity="center">
                            </TextView>

                        </LinearLayout>

                    </LinearLayout>

                </LinearLayout>


            </androidx.cardview.widget.CardView>

        </LinearLayout>

    </RelativeLayout>

</ScrollView>